staging/spark/spark-ui-proxy-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-ui-proxy
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    component: spark-ui-proxy
  type: LoadBalancer
