staging/spark/zeppelin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zeppelin
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    component: zeppelin
  type: ClusterIP
