staging/spark/spark-ui-proxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spark-ui.lab.bmlldev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: spark-ui-proxy
          servicePort: http
