staging/spark/zeppelin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zeppelin-ingress
spec:
  rules:
  - host: spark-zeppelin.lab.bmlldev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: zeppelin
          servicePort: http
